--- a/ue_app/static/css/main/base.css
+++ b/ue_app/static/css/main/base.css
@@ -15,6 +15,7 @@
     --cl2: rgb(36, 34, 34);
     --bg: rgb(255, 153, 0);
     --gbg: rgb(238, 236, 236);
+    --lobg: rgb(255, 220, 155);
 }
 h1,h2,h3,h4,h5,h6{
     font-family: 'Poppins', sans-serif;
@@ -35,6 +36,7 @@ body{
     padding: 0;
     width: 100%;
     overflow-x: hidden;
+    background: rgba(255, 251, 243, 0.8);
 }
 /* Navigation Menu */
 .header{
@@ -67,6 +69,7 @@ body{
     justify-content: space-between;
 
 }
+
 box-icon{
     margin-top: 3px;
 }
@@ -74,7 +77,23 @@ box-icon{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80px;
+    width: 100%;
+    /* border: solid red; */
+}
+.search-sign-in{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+.logo-menu {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+.search-sign-in {
+    display: flex;
+    align-items: center;
+    justify-content: right;
 }
 .icon-div{
     width: 30px;
@@ -229,7 +248,7 @@ box-icon{
 .popular-video-card{
     margin-bottom: 10px;
     background-color: #fff;
-    padding: 5px; 
+    padding: 5px 5px 5px 5px; 
     border-radius: 5px;
 }
 
@@ -237,7 +256,7 @@ box-icon{
 /* CATEGORY CSS */
 .category-section{
     margin-top: 10px;
-    padding: 100px 0 0px 0;
+    padding: 70px 0 0px 0;
     /* border: solid red; */
     display: flex;
     justify-content: center;
@@ -257,20 +276,28 @@ box-icon{
     /* width: 100%; */
 }
 .category-container{
-    width: 100%;
+    width: 800px;
     height: 100%;
     display: flex;
     justify-content: left;
     align-items: center;
     overflow-x: scroll;
+    margin-top: 5px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: inset -3px -3px 7px #ffffffb2,
+            inset 3px 3px 7px rgba(94, 104, 121, 0.945);
     /* position: relative; */
 }
 .category-card{
-    margin: 10px 10px 10px 0;
+    margin: 10px 20px 10px 0;
+    box-shadow: -3px -3px 7px #ffffffb2, 3px 3px 7px rgba(94, 104, 121, 0.945);
+    border-radius: 5px;
 }
 .category-card img{
     width: 100px;
     aspect-ratio: 2/3;
+    border-radius: 5px 5px 0 0;
 }
 
 /* TABS CSS */
@@ -318,7 +345,7 @@ box-icon{
     display: flex;
     flex-wrap: wrap;
     /* justify-content: space-evenly; */
-    margin: 20px;
+    margin: 20px 0;
     /* border: rgb(0, 255, 13) solid; */
     /* width: 100%; */
     height: 100%;
@@ -360,6 +387,7 @@ box-icon{
 .category-container-stats{
     padding: 10px;
     display: flex;
+    flex-wrap: wrap;
 }
 .category-stats{
     padding: 8px;
@@ -371,6 +399,8 @@ box-icon{
 .content-title{
     display: flex;
     justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 .category-stats span{
     font-weight: 700;
@@ -391,6 +421,11 @@ box-icon{
     justify-content: center;
     align-items: center;
     padding: 50px;
+}
+.content-page{
+    max-width: 800px;
+    width: 80%;
+    min-width: 300px;
 }
 .popular-videos-card-tab-display{
     margin-top: 30px;
@@ -509,4 +544,286 @@ box-icon{
     justify-content: center;
     align-items: center;
     padding: 20px 20px 10px 10px;
+}
+
+/* Sign Up/ Login */
+
+
+.display-sign-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    background-color: rgba(255, 220, 155, 0.8);
+    /* background: url('static/images/image/undraw_into_the_night_vumi.svg'); */
+}
+.sign-up-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.sign-up-card{
+    background-color: #fff;
+    padding: 30px;
+    width: 45vw;
+    height: fit-content;
+    min-width: 300px;
+    border-radius: 10px;
+}
+.sign-up-card .center{
+    text-align: center;
+    margin: 30px auto;
+}
+.sign-up-card label{
+    font-weight: 700;
+    margin-top: 20px;
+}
+/* .sign-up-card .input100 {
+    padding: 7px;
+    border-radius: 5px;
+    border: 1px solid var(--gbg);
+    background: var(--gbg);
+    margin-bottom: 10px;
+} */
+.form-container input{
+    padding: 7px;
+    border-radius: 5px;
+    border: 1px solid var(--gbg);
+    background: var(--gbg);
+    margin-bottom: 0;
+}
+.sign-up-card input:focus {
+    border: none;
+    outline: 2px solid var(--bg);
+    background: none;
+}
+.sign-up-button{
+    width: fit-content;
+    height: fit-content;
+    float: right;
+    background: var(--bg);
+    color: #fff;
+    padding: 8px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form{
+    width: 100%;
+}
+.form-container{
+    width: 100%;
+    height: fit-content;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+.fieldWrapper{
+    width: 100%;
+    height: 100%;
+}
+input{
+    width: 100%;
+}
+.text-info{
+    color: var(--bg);
+    font-size: 11px;
+}
+/* BANNER STYLES */
+.banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.welcome-banner{
+    width: 300px;
+    height: 100px;
+    margin: 10px;
+    border-radius: 5px;
+}
+.banner-1{
+    background-color: rgb(4, 4, 109);
+}
+.banner-2 {
+    background-color: var(--bg);
+}
+.welcome-banner img{
+    width: 100%;
+    height: 60%;
+    border-radius: 5px 5px 0px 0px;
+}
+.welcome-banner h3 {
+    color: white;
+    font-size: 17px;
+}
+.welcome-banner p {
+    color: white;
+    font-size: 12px;
+}
+.cancel-banner{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    cursor: pointer;
+    margin-left: -80px;
+    margin-top: -80px;
+    margin-right: 50px;
+}
+
+/* User Avatar */
+.user-avatar{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.user-avatar-letter{
+    background-color: var(--lobg);
+}
+.user-avatar p{
+    padding: 0;
+    margin: 0;
+}
+.user-avatar img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+   
+}
+.user-avatar p{
+    font-size: 17px;
+    font-weight: 500;
+    color: var(--bg);
+}
+.user-avatar-account-card{
+    display: none;
+    width: 160px;
+    padding: 10px;
+    border-radius: 5%;
+    height: fit-content;
+    position: fixed;
+    top: 30px;
+    right: 10px;
+    background-color: var(--gbg);
+}
+.sign-auth{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+.sign-auth box-icon{
+    width: 20px;
+    height: 20px;
+}
+.sign-auth a{
+    margin-left: 7px;
+    font-size: 13px;
+}
+.signin{
+    background-color: var(--bg);
+    border-radius: 5%;
+    width: fit-content;
+    padding: 2px 4px;
+    margin-top: 10px;
+}
+.cancel-sign {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    float: right;
+    margin-top: -5px;
+    margin-right: -2px;
+    cursor: pointer;
+}
+
+.signin a{
+    color: var(--lobg);
+    margin-left: 0;
+}
+.sin{
+    padding: 0;
+}
+.showpassword-container{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: fit-content;
+}
+.help{
+    font-size: 10px;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.showpassword-container input{
+    width: fit-content;
+    cursor: pointer;
+    outline: none;
+}
+.showpassword-container input:focus {
+    outline: none;
+}
+.showpassword-container p{
+    color: var(--bg);
+}
+
+/* SEARCH */
+
+#search {
+    padding: 2px 25px 2px 5px;
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 20px;
+    width: 100%;
+    border: thin solid rgb(224, 223, 223);
+    border-radius: 5px;
+}
+
+#search:focus{
+    border: none;
+    outline: thin solid var(--bg);
+}
+.search{
+    width: 90%;
+}
+
+/* Messages Styles */
+.message-alert{
+    width: 300px;
+    height: fit-content;
+    padding: 10px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: calc(50% - 150px);
+    top: calc(50% - 150px);
+    background-color: rgba(255, 255, 255, 0.904);
+}
+.message-alert img{
+    max-width: 80%;
+    max-height: 60%;
+}
+.message-alert p {
+    font-weight: 600;
 }
